.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/overriddenSchemaConstructor.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/overriddenSchemaConstructor.ts(29,3): error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)


==== /.src/overriddenSchemaConstructor.ts (1 errors) ====
    import * as Schema from "effect/Schema"
    
    export class Valid extends Schema.Class<Valid>("Valid")({
      a: Schema.Finite
    }) {}
    
    export class Valid2 extends Schema.Class<Valid2>("Valid")({
      a: Schema.Finite
    }) {
      otherMethod() {
        return this.a
      }
    }
    
    export class BaseClass {}
    export class Valid3 extends BaseClass {
      constructor() {
        super()
      }
    }
    
    // this is invalid because if the class extends a Schema, there should be no constructor override
    export class InvalidBecauseOfConstructor
      extends Schema.Class<InvalidBecauseOfConstructor>("InvalidBecauseOfConstructor")({
        a: Schema.Finite
      })
    {
      // should be report here at constructor location
      constructor() {
      ~~~~~~~~~~~
!!! error TS377044: This Schema subclass defines its own constructor. For Schema classes, constructor overrides break decoding behavior for the class shape. Custom construction can be expressed through a static `new` method instead. effect(overriddenSchemaConstructor)
        super({ a: 42 })
      }
    }
    
